# landing_simulation

./: CMakeLists.txt  README.md  package.xml
config/: settings.yaml  tags.yaml
include/landing_simulation/: AprilTagDetection.hpp  LinearKalmanFilter.hpp  Mathematics.hpp  PositionControl.hpp  windGenerator.hpp
include/landing_simulation/test/: high_level_control_class.hpp  tf_talker_class.hpp
launch/: autonomous_landing.launch  dataPlot.launch  sitl_als.launch
models/: aimsUGV.urdf
msg/: wind.msg
scripts/: recordData.py  windGenerationTest.py
src/: AprilTagDetection.cpp  LinearKalmanFilter.cpp  Mathematics.cpp  PositionControl.cpp  SetpointPublisher.cpp  UGVVelocityControl.cpp  WindGenerator.cpp
src/test/: control_test.cpp  high_level_control_class.cpp  originalLinearKalmanFilter.cpp  tf_talker_class_node.cpp
start/: aims_start.sh  command.sh  mv_tags.sh  sitl_start.sh  start.yml
worlds/: beta-multi_aprilTags.world  multi_aprilTags.world
